--- a/src/scss/Containers/search.scss
+++ b/src/scss/Containers/search.scss
@@ -74,7 +74,7 @@
           .Select-input input,
           .Select-value {
             text-transform: uppercase;
-            font-size: 1em;
+            font-size: 18px;
             height: 40px;
           }
           .Select-clear-zone {
